revisione code smell segnalati da Sonar